# capyfin

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TODOS.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.claude/: launch.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  sidecar.rs  state.rs
apps/desktop/src-tauri/src/commands/: app.rs  chat.rs
config/: app-manifest.json
crates/capyfin-cli/: Cargo.toml
crates/capyfin-cli/src/: lib.rs  main.rs
crates/capyfin-core/: Cargo.toml
crates/capyfin-core/src/: app.rs  lib.rs  manifest.rs  workspace.rs
docs/: architecture.md  releases.md
scripts/: dev-browser.mjs  sync-version.mjs
test-bundle/: package.json
test-bundle/src/auth/: service.test.ts
test-bundle/src/automation/: service.test.ts
test-bundle/src/data-providers/: service.test.ts  service.ts
test-bundle/src/delivery-channels/: service.test.ts  service.ts
test-bundle/src/internal-gateway/: chat-activity.ts  clawhub-client.ts  device-identity.ts  gateway-client.ts  host.ts  metadata-store.test.ts  paths.ts  (+5 more)
(+190 files in other folders)
