[workspace]
members = ["apps/desktop/src-tauri", "crates/capyfin-cli", "crates/capyfin-core"]
resolver = "3"

[workspace.package]
authors = ["CapyFin"]
edition = "2024"
license = "Proprietary"
rust-version = "1.94"
version = "0.1.0"

[workspace.dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = "2.10.3"
tauri-build = "2.5.6"
