[package]
name = "capyfin-desktop"
version.workspace = true
description = "CapyFin desktop application"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "capyfin_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
tauri.workspace = true
tokio.workspace = true
uuid.workspace = true
